[project]
name = "storyboarder"
version = "0.1.0"
description = ""
authors = [
    {name = "Hema Deva Sagar",email = "phdsagar3@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "openai (>=1.90.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "runwayml (>=3.6.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
black = "^25.1.0"
ruff = "^0.12.0"
mypy = "^1.16.1"
pre-commit = "^4.2.0"

